--- a/experiments/exp_mi/configs.yml
+++ b/experiments/exp_mi/configs.yml
@@ -5,7 +5,7 @@ data:
   rho: [-0.99, -0.75, -0.5, 0, 0.5, 0.75, 0.99]
 
 methods:
-  LMI:
+  DINE:
     hidden_sizes: 4
     n_components: 16
   MINE:
